@@ -1,5 +1,13 @@
 2004-04-16  Paolo Carlini  <pcarlini@suse.de>
 
+	PR libstdc++/14975
+	* include/bits/fstream.tcc (basic_filebuf::imbue): Zero _M_codecvt
+	in case of error.
+	* testsuite/27_io/basic_filebuf/imbue/char/14975-1.cc: New.
+	* testsuite/27_io/basic_filebuf/imbue/wchar_t/14975-2.cc: New.
+
+2004-04-16  Paolo Carlini  <pcarlini@suse.de>
+
 	* acconfig.h: Remove _GLIBCXX_USE_LONG_DOUBLE entry, not
 	used anymore.
 	* config.h.in: Regenerate.
